--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+  mobx_codegen: ^2.0.1+3
 
 dev_dependencies:
   test: 
 
   flutter_test:
     sdk: flutter
+  
+  build_runner: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
