--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   mobx_codegen: ^2.0.1+3
+  dartz: ^0.10.0-nullsafety.2
 
 dev_dependencies:
   test: 
