--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_mobx: ^2.0.0
   mobx_codegen: ^2.0.1+3
   dartz: ^0.10.0-nullsafety.2
+  flutter_arrow_path: ^1.1.1
+
 
 dev_dependencies:
   test: 
