--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mobx_codegen: ^2.0.1+3
   dartz: ^0.10.0-nullsafety.2
   flutter_arrow_path: ^1.1.1
+  flutter_svg: ^0.22.0
 
 
 dev_dependencies:
@@ -55,8 +56,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/pin.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
